fix: center preloader animation text on mobile

--- a/components/utils/Preloader/style.module.css
+++ b/components/utils/Preloader/style.module.css
@@ -27,6 +27,9 @@
   color: white;
   font-size: 42px;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
   position: absolute;
   z-index: 1;
 }
